--- a/blog/package.json
+++ b/blog/package.json
@@ -4,9 +4,9 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "node --test",
-    "start": "node index.js",
-    "dev": "nodemon index.js"
+    "start": "cross-env NODE_ENV=production node index.js",
+    "dev": "cross-env NODE_ENV=development nodemon index.js",
+    "test": "cross-env NODE_ENV=test node --test"
   },
   "author": "Daniel Garcia",
   "license": "MIT",
@@ -18,6 +18,8 @@
     "mongoose": "^8.2.0"
   },
   "devDependencies": {
-    "nodemon": "^3.1.0"
+    "cross-env": "^7.0.3",
+    "nodemon": "^3.1.0",
+    "supertest": "^6.3.4"
   }
 }
